# distributed-mean

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TASK.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  pr-quality.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: 01-queue-technology.md  02-aggregation-algorithm.md  03-realtime-dashboard.md  04-code-quality.md
api/: Dockerfile  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
api/src/: index.ts
api/src/__tests__/: internal.test.ts  jobs.test.ts  lib.test.ts  reaper.test.ts  redis.test.ts  routes.test.ts  sse.test.ts  storage.test.ts  task-complete.test.ts  types.test.ts
api/src/db/: index.ts  schema.sql
api/src/lib/: redis.ts  sse.ts  storage.ts
api/src/middleware/: errorHandler.ts
api/src/routes/: internal.ts  jobs.ts  system.ts
api/src/services/: jobService.ts  reaperService.ts  systemService.ts
api/src/types/: index.ts
docs/adr/: ADR-001-repo-structure.md  ADR-002-api-framework.md  ADR-003-worker-language.md  ADR-004-local-first.md  README.md
docs/design/: DESIGN-001-job-lifecycle.md  DESIGN-002-worker-dispatch.md  DESIGN-003-aggregation.md  DESIGN-004-ui-realtime.md  README.md
docs/itd/: ITD-001-queue-technology.md  ITD-002-work-distribution-algorithm.md  ITD-003-result-aggregation.md  ITD-004-database-choice.md  ITD-005-realtime-ui-transport.md  ITD-006-file-storage.md  ITD-007-worker-process-model.md  README.md
docs/research/: aggregation-algorithm.md  file-storage.md  queue-technology.md  worker-orchestration.md
docs/tradeoffs/: README.md
shared/: constants.ts
tests/integration/: test_job_lifecycle.py
ui/: index.html
workers/: .coverage  Dockerfile  models.py  pyproject.toml  requirements.txt  worker.py
workers/tests/: test_main_loop.py  test_models.py  test_worker.py
